# supermemory-exploration

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: domain-100-case.schema.json
docs/: README.md  agent-architectures.md  benchmarks.md  capability-map.md  ecosystem.md  experiments.md  framework-integrations.md  memory-model.md  practical-agents.md  production-playbook.md  provider-combinations.md  roadmap.md  source-internals.md  verdict.md
evidence/: 2026-07-16-field-lab.md  2026-07-16-fifth-pass-operational-agents.md  2026-07-16-fourth-pass-agent-systems.md  2026-07-16-multi-provider-agents.md  2026-07-16-second-pass-agents.md  2026-07-16-seventh-pass-deep-operations.md  2026-07-16-sixth-pass-deep-agents.md  2026-07-16-third-pass-lifecycle-and-benchmark.md  2026-07-17-eighth-pass-practical-agent-expansion.md  2026-07-17-ninth-pass-resilience-and-freshness.md  2026-07-17-tenth-pass-capacity-connectors-and-recovery.md  memorybench-openrouter-smoke.json
examples/: run_agent_patterns.py
experiments/: README.md  run_adaptive_bulk_ingestion_controller.py  run_adaptive_model_router.py  run_adaptive_tutor.py  run_advanced_agents.py  run_adversarial_dissent_council.py  run_all_provider_readiness_commander.py  run_blinded_domain_100_benchmark.py  run_change_monitor.py  run_change_risk_board.py  run_concurrent_four_surface_recall_challenge.py  run_consistency_matrix.py  run_contract_drift_sentinel.py  run_corroborated_research_swarm.py  run_decision_council.py  run_dependency_risk_guardian.py  run_domain_memory_benchmark.py  run_dreaming_review_matrix.py  (+36 more)
(+140 files in other folders)
