[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "supermemory-field-lab"
version = "0.1.0"
description = "Reproducible experiments and agent patterns for Supermemory"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
supermemory-probe = "supermemory_lab.probes:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
